appId: ${APP_ID}
---
- runFlow:
    file: login_as_driver.yaml
- extendedWaitUntil:
    visible: "Lenta"
    timeout: 15000
- assertVisible: "Тип заявки"
- tapOn: "Тип заявки"
- extendedWaitUntil:
    visible: "Taklif yuborish"
    timeout: 8000
