appId: ${APP_ID}
tags:
  - login
  - smoke
---
- launchApp:
    clearState: true
- assertVisible: "Tizimga kirish"
- tapOn: "Parolni unutdingizmi"
- extendedWaitUntil:
    visible: "Parolni unutdingizmi?"
    timeout: 5000
- assertVisible: "Ro'yxatdan o'tishda kiritilgan telefon raqamingizga kod yuboramiz"
- assertVisible: "+998"
- assertVisible: "Davom etish"
