appId: ${APP_ID}
tags:
  - login
  - negative
---
- launchApp:
    clearState: true
- assertVisible: "Tizimga kirish"
- tapOn: "Kirish"
- assertVisible:
    text: "Tizimga kirish"