appId: ${APP_ID}
tags:
  - login
  - negative
---
- launchApp:
    clearState: true
- assertVisible: "Tizimga kirish"
- tapOn: "00 000 00 00"
- inputText: "123"
- hideKeyboard
- tapOn: "Parol"
- inputText: "Nawrizbek_20"
- hideKeyboard
- tapOn: "Kirish"
- extendedWaitUntil:
    visible: "Tizimga kirish"
    timeout: 5000
- assertNotVisible: "Lenta"
