appId: ${APP_ID}
tags:
  - login
  - smoke
---
- launchApp:
    clearState: true
- assertVisible: "Tizimga kirish"
- tapOn: "00 000 00 00"
- inputText: ${DRIVER_PHONE_NO_PREFIX}
- hideKeyboard
- tapOn: "Parol"
- inputText: ${DRIVER_PASSWORD}
- hideKeyboard
- tapOn: "Kirish"
- extendedWaitUntil:
    visible: "Lenta"
    timeout: 15000
- assertVisible: "Takliflarim"
- assertVisible: "Profil"
