appId: ${APP_ID}
tags:
  - navigation
  - post-login
---
- runFlow:
    file: ../_common/login_as_driver.yaml
- assertVisible: "Lenta"
- tapOn: "Takliflarim"
- assertVisible:
    text: "Mening takliflarim"
- assertVisible: "Barcha holatlar"
- tapOn: "Profil"
- assertVisible:
    text: "Profil"
- assertVisible: ${DRIVER_FULL_NAME}
- tapOn: "Lenta"
- assertVisible:
    text: "Lenta"