appId: ${APP_ID}
tags:
  - offers
  - post-login
---
- runFlow:
    file: ../_common/login_as_driver.yaml
- tapOn: "Takliflarim"
- assertVisible: "Barcha holatlar"
- tapOn: "Yangi"
- assertVisible:
    text: "Yangi"