appId: ${APP_ID}
tags:
  - profile
  - i18n
---
- runFlow:
    file: ../_common/login_as_driver.yaml
- tapOn: "Profil"
- assertVisible: "Til"
- tapOn: ".*O.*zbek.*"
- assertVisible: "Interfeys tili"
