appId: ${APP_ID}
tags:
  - profile
---
- runFlow:
    file: ../_common/login_and_open_profile_edit.yaml
- scroll
- tapOn:
    text: "06.05.2012"
- assertNotVisible: "Profilni tahrirlash"
- tapOn: "OK"
- assertVisible: "Profilni tahrirlash"
