appId: ${APP_ID}
tags:
  - registration
---
- launchApp:
    clearState: true
- tapOn: "Ro'yxatdan o'tish"
- assertVisible: "Xush kelibsiz"
- tapOn: "00 000 00 00"
- inputText: "918744540"
- hideKeyboard
- tapOn: "Kirish"
- extendedWaitUntil:
    notVisible: "Xush kelibsiz"
    timeout: 10000
- extendedWaitUntil:
    notVisible: "Tasdiqlash kodini olish uchun telefon raqamingizni kiriting"
    timeout: 5000
